<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#000"
        android:layout_marginBottom="5dp"
        />
    
    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="2dp" >

        <RadioButton
            android:id="@+id/rb_recommand"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_recommand_bg"
            android:text="@string/tab_recommand" />

        <RadioButton
            android:id="@+id/rb_service"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_service_bg"
            android:text="@string/tab_service" />

        <RadioButton
            android:id="@+id/rb_groupchat"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_group_bg"
            android:text="@string/tab_groupchat" />

        <RadioButton
            android:id="@+id/rb_dynamic"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_dynamic_bg"
            android:text="@string/tab_dynamic" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_mine_bg"
            android:text="@string/tab_mine" />
    </RadioGroup>

</LinearLayout>