<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 热门目的地(最多支持四个) -->

    <GridView
        android:id="@+id/gridview_head_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:verticalSpacing="15dp"
        android:numColumns="2"
        android:visibility="gone"
        android:background="#3000"
         >
    </GridView>

    <!-- 当地导游 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_home"
            android:textColor="#4000" />
        <TextView
            android:id="@+id/guide_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/guide_more"
            android:textColor="#50BBFE" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:orientation="horizontal" >
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/local_home"/>
        <TextView
            android:id="@+id/local_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/guide_more"
            android:textColor="#50BBFE" />
    </RelativeLayout>

</LinearLayout>